--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <p>Original shown in screenshot</p>
                         <p>A loan system to help simplify loaning out school instruments to students</p>
                         <p>This is an Streamlit-based application, while the original was purely running on the terminal</p>
-                        <button type="button" class="btn btn-dark x-large"><a href="https://github.com/contyadvait/QMLoaner"></a>GitHub (link to new edition in README)</button>
+                        <button type="button" class="btn btn-dark x-large"><a href="https://github.com/advaitconty/QMLoaner"></a>GitHub (link to new edition in README)</button>
                         <button type="button" class="btn btn-dark x-large"><a href="https://qmloaner.streamlit.app"></a>Demo (new edition)</button>
                         <p>The new edition demo might not work because this is not the one in the school system, and the MongoDB cluster likes to go to sleep occassionally.</p>
                     </div>
@@ -88,8 +88,19 @@
                         <h1>FitStreak</h1>
                         <img src="images/fitstreak.png" class="img-fluid">
                         <p>A fitness application made part of the Swift Accelerator Programme class of 2023</p>
-                        <button type="button" class="btn btn-dark x-large"><a href="https://github.com/contyadvait/gymguru"></a>GitHub</button>
+                        <button type="button" class="btn btn-dark x-large"><a href="https://github.com/advaitconty/gymguru"></a>GitHub</button>
                         <button type="button" class="btn btn-dark x-large"><a href="https://apps.apple.com/us/app/fitstreak-exercise-tracker/id6473677740"></a>App download</button>
+                    </div>
+
+                    <div class="card neuebit padding">
+                        <h1>Solstice</h1>
+                        <img src="images/solstice.png" class="img-fluid">
+                    <p>A pomodoro timer made with the sole focus of aesthetics</p>
+                        <div class="hstack gap-3">
+                        <button type="button" class="btn btn-dark x-large"><a href="https://github.com/advaitconty/solstice"></a>GitHub</button>
+                        <button type="button" class="btn btn-dark x-large"><a href="https://github.com/advaitconty/Solstice/releases/tag/🌌-Nebula-v1.2-Eclipse"></a>Download from GitHub</button>
+                        <button type="button" class="btn btn-dark x-large"><a href="https://solstice.advaitconty.com"></a>Website</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -246,8 +257,8 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
                 <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
               </svg>
-            <p style="margin: 0;">GitHub (very barebones)</p>
-            <a href="https://github.com/contyadvait" style="text-decoration: none;">contyadvait</a>
+            <p style="margin: 0;">GitHub</p>
+            <a href="https://github.com/advaitconty" style="text-decoration: none;">advaitconty</a>
         </div>
     </div>
 </body>
