--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <img src="images/the-tetris-trap/logo.png" class="img-fluid">
                         <p>A game I made for a game jam hosted by Hack Club! (Counterspell Singapore)</p>
                         <p>btw i helped host Counterspell Singapore too!</p>
-                        <button type="button" class="btn btn-dark x-large"><a href="https://github.com/contyadvait/tetris-the-last-tetris"></a>GitHub</button>
+                        <a href="https://github.com/contyadvait/tetris-the-last-tetris"><button type="button" class="btn btn-dark x-large">GitHub</button></a>
                     </div>
 
                     <div class="card neuebit padding">
